--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,8 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  margin: 0;
+  padding: 0;
 }
 
 code {
@@ -19,4 +21,7 @@ code {
   background-color: white !important;
   color: rgb(6, 0, 43) !important;
   margin-top: 20px;
+}
+.container{
+  padding: 20px 1%;
 }
