--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,3 +29,9 @@ code {
   border: none;
   border-bottom: 2px solid rgb(0, 94, 181);
 }
+.tablerow{
+  color: white;
+}
+.tablecolmain{
+  background-color: rgb(0, 94, 181);
+}
